--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".module.createpost.CreatePost">
+    android:fillViewport="true">
 
-    <!--    <LinearLayout-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        android:orientation="vertical"-->
-    <!--        tools:layout_editor_absoluteX="174dp"-->
-    <!--        tools:layout_editor_absoluteY="309dp">-->
-
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
+        android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:background="#B34141"
-        android:gravity="center"
-        android:includeFontPadding="true"
-        android:text="Dodaj nowy post"
-        android:textColor="#F3F3F3"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:background="#B34141"
+            android:gravity="center"
+            android:includeFontPadding="true"
+            android:padding="5dp"
+            android:text="@string/post_create_new_header"
+            android:textColor="#F3F3F3"
+            android:textSize="28sp"
+            android:textStyle="bold" />
 
     <LinearLayout
         android:id="@+id/tool_bar"
@@ -103,46 +104,68 @@
         </TableRow>
     </TableLayout>
 
-    <LinearLayout
-        android:id="@+id/button_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/gallery"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/bTakePhoto"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/button_bar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_camera" />
+            android:layout_below="@id/gallery"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/bGalleryPhoto"
-            android:layout_width="wrap_content"
+            <ImageButton
+                android:id="@+id/bTakePhoto"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="false"
+                android:background="@color/mainColor"
+                android:scaleType="fitCenter"
+                app:srcCompat="@android:drawable/ic_menu_camera"
+                tools:srcCompat="@android:drawable/ic_menu_camera" />
+
+            <ImageButton
+                android:id="@+id/bGalleryPhoto"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="false"
+                android:background="@color/mainColor"
+                android:scaleType="fitCenter"
+                app:srcCompat="@android:drawable/ic_menu_gallery"
+                tools:srcCompat="@android:drawable/ic_menu_gallery" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/postDescription"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_gallery" />
+            android:layout_above="@id/bAddPost"
+            android:layout_below="@id/button_bar"
+            android:minHeight="150dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="7dp"
+            android:ems="10"
+            android:gravity="start|top"
+            android:hint="@string/post_content"
+            android:inputType="textMultiLine" />
+
+        <Button
+            android:id="@+id/bAddPost"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="@string/add"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/bCreatePost_Cancel"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_alignParentBottom="true"
+            android:text="@android:string/cancel"
+            android:textSize="20sp" />
+
     </LinearLayout>
-
-    <EditText
-        android:id="@+id/postDescription"
-        android:layout_width="match_parent"
-        android:layout_height="277dp"
-        android:layout_above="@id/bAddPost"
-        android:layout_below="@id/button_bar"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="7dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:hint="treść ..."
-        android:inputType="textMultiLine" />
-
-    <Button
-        android:id="@+id/bAddPost"
-        android:layout_width="match_parent"
-        android:layout_height="108dp"
-        android:layout_alignParentBottom="true"
-        android:text="Button" />
-
-</RelativeLayout>
+</ScrollView>
