--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundColor"
@@ -13,10 +12,22 @@
         android:orientation="vertical"
         android:padding="10dip">
 
+        <TextView
+            android:id="@+id/header_nameapp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/dancing_script_bold"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
+            android:text="@string/app_name"
+            android:textColor="@color/black"
+            android:textSize="56sp" />
+
         <ImageView
             android:id="@+id/LogoImg"
             android:layout_width="wrap_content"
             android:layout_height="118dp"
+            android:visibility="gone"
             app:srcCompat="@drawable/log" />
 
         <ImageView
@@ -49,8 +60,8 @@
             android:id="@+id/loginLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
-            android:textSize="24sp"/>
+            android:text="@string/login"
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/loginInput"
@@ -69,7 +80,7 @@
             android:id="@+id/passwordLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hasło:"
+            android:text="@string/password"
             android:textSize="24sp" />
 
         <EditText
@@ -89,9 +100,10 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="30dp"
             android:width="150dp"
-            android:height="70dp"
+            android:height="80dp"
             android:onClick="signIn"
-            android:text="Zaloguj" />
+            android:text="@string/singin"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/bRegistration"
@@ -99,10 +111,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:width="250dp"
-            android:height="15dp"
+            android:height="60dp"
             android:backgroundTint="#B88AA5"
             android:onClick="signIn"
-            android:text="Zarejestruj" />
+            android:text="@string/registration" />
 
         <Button
             android:id="@+id/bResetPassword"
@@ -110,10 +122,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:width="250dp"
-            android:height="15dp"
+            android:height="60dp"
             android:backgroundTint="#B88AA5"
             android:onClick="signIn"
-            android:text="Zresetuj hasło" />
+            android:text="@string/forgotpassword" />
 
 
     </LinearLayout>
