--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -31,35 +31,44 @@
 
             <TextView
                 android:id="@+id/userName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="62dp"
                 android:layout_weight="1"
                 android:padding="5dp"
                 android:paddingStart="10dp"
                 android:text="Jak Nowak"
                 android:textColor="#fff"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/postdate"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="0dp"
                 android:layout_weight="1"
-                android:gravity="right"
-                android:paddingEnd="10dp"
-                android:text="20-04-2021"
-                android:textColor="#fff" />
+                android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/removePost3"
-                android:layout_width="wrap_content"
-                android:layout_height="46dp"
-                android:layout_weight="1"
-                android:background="#D1C0CB"
-                android:visibility="gone"
-                app:srcCompat="@android:drawable/ic_menu_delete" />
+                <TextView
+                    android:id="@+id/postdate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:paddingEnd="10dp"
+                    android:text="20-04-2021"
+                    android:textColor="#fff" />
+
+                <ImageButton
+                    android:id="@+id/removePost3"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="right"
+                    android:layout_weight="1"
+                    android:background="#D1C0CB"
+                    android:visibility="gone"
+                    app:srcCompat="@android:drawable/ic_menu_delete"
+                    tools:visibility="visible" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/postid"
@@ -97,7 +106,6 @@
                 android:layout_weight="1"
                 android:background="#D1C0CB"
                 android:gravity="center_vertical"
-                android:text="4"
                 android:textColor="#fff"
                 android:textSize="24sp" />
 
@@ -116,7 +124,6 @@
                 android:layout_weight="1"
                 android:background="#D1C0CB"
                 android:gravity="center_vertical"
-                android:text="21"
                 android:textAlignment="center"
                 android:textColor="#fff"
                 android:textSize="24sp" />
@@ -147,7 +154,7 @@
                 android:layout_weight="1"
                 android:background="#FFFFFF"
                 android:ems="10"
-                android:hint="comment"
+                android:hint="@string/commnet"
                 android:inputType="textPersonName"
                 android:textSize="24sp" />
 
