--- a/app/src/main/res/layout/activity_profile_photo.xml
+++ b/app/src/main/res/layout/activity_profile_photo.xml
@@ -1,9 +1,86 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ProfilePhotoActivity">
+    android:fillViewport="true">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dip" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/bprofilePhoto_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@color/mainColor"
+                android:scaleType="fitCenter"
+                app:srcCompat="@android:drawable/ic_menu_camera"
+                tools:srcCompat="@android:drawable/ic_menu_camera" />
+
+            <ImageButton
+                android:id="@+id/bprofilePhoto_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@color/mainColor"
+                android:scaleType="fitCenter"
+                app:srcCompat="@android:drawable/ic_menu_gallery"
+                tools:srcCompat="@android:drawable/ic_menu_gallery" />
+
+            <ImageButton
+                android:id="@+id/bprofilePhoto_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@color/mainColor"
+                android:scaleType="fitCenter"
+                app:srcCompat="@android:drawable/ic_menu_delete"
+                tools:srcCompat="@android:drawable/ic_menu_delete" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/bprofilePhoto_photoImg"
+            android:layout_width="match_parent"
+            android:layout_height="330dp"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="5dp"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/bprofilePhoto_save"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_marginRight="3dp"
+                android:layout_weight="1"
+                android:text="@string/save" />
+
+            <Button
+                android:id="@+id/bprofilePhoto_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_marginLeft="3dp"
+                android:layout_weight="1"
+                android:text="@android:string/cancel" />
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
