--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -20,7 +19,8 @@
             android:id="@+id/btable_create_tables"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/table_create" />
+            android:text="@string/table_create"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/tableImage"
