--- a/app/src/main/res/layout/host_table_listview.xml
+++ b/app/src/main/res/layout/host_table_listview.xml
@@ -23,17 +23,11 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/table_username"
+        android:id="@+id/host_table_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_weight="1"
-        android:text="EMPTY"
         android:textSize="18sp" />
 
-    <Spinner
-        android:id="@+id/host_assignedList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
 </LinearLayout>
