--- a/app/src/main/res/layout/mini_post.xml
+++ b/app/src/main/res/layout/mini_post.xml
@@ -5,10 +5,8 @@
     android:id="@+id/table_main_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
     android:layout_marginBottom="40dp"
-    android:background="#FFFFFF"
-    android:foregroundTint="#3F51B5"
+    android:background="@color/lightBackg"
     android:orientation="vertical">
 
 
@@ -32,35 +30,42 @@
 
         <TextView
             android:id="@+id/userName"
-            android:layout_width="wrap_content"
-            android:layout_height="62dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:padding="5dp"
             android:paddingStart="10dp"
-            android:text="Jak Nowak"
             android:textColor="#fff"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/postdate"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="0dp"
             android:layout_weight="1"
-            android:gravity="right"
-            android:paddingEnd="10dp"
-            android:text="20-04-2021"
-            android:textColor="#fff" />
+            android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/removePost3"
-            android:layout_width="wrap_content"
-            android:layout_height="46dp"
-            android:layout_weight="1"
-            android:background="#D1C0CB"
-            android:visibility="gone"
-            app:srcCompat="@android:drawable/ic_menu_delete" />
+            <TextView
+                android:id="@+id/postdate"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_marginTop="0dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:paddingEnd="10dp"
+                android:textColor="#fff" />
+
+            <ImageButton
+                android:id="@+id/removePost3"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:background="#D1C0CB"
+                android:visibility="gone"
+                app:srcCompat="@android:drawable/ic_menu_delete"
+                tools:visibility="visible" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/postid"
@@ -91,7 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:includeFontPadding="true"
-            android:text="WIĘCEJ"
+            android:text="@string/post_open"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
@@ -105,6 +110,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/button_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -125,7 +131,6 @@
             android:layout_weight="1"
             android:background="#D1C0CB"
             android:gravity="center_vertical"
-            android:text="4"
             android:textColor="#fff"
             android:textSize="24sp" />
 
@@ -144,7 +149,6 @@
             android:layout_weight="1"
             android:background="#D1C0CB"
             android:gravity="center_vertical"
-            android:text="21"
             android:textAlignment="center"
             android:textColor="#fff"
             android:textSize="24sp" />
@@ -157,7 +161,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="5dp"
         android:background="#CFEBF8"
         android:orientation="vertical">
 
@@ -166,13 +170,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#E0DDE6"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone"
+            tools:visibility="visible">
 
 
             <ImageView
                 android:id="@+id/c2ProfilPhoto"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_weight="0"
                 tools:srcCompat="@android:drawable/ic_menu_camera" />
@@ -195,7 +202,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
-                        android:text="Alina Kowalska"
                         android:textColor="#5C514E"
                         android:textStyle="bold|italic" />
 
@@ -205,7 +211,6 @@
                         android:layout_height="19dp"
                         android:layout_marginEnd="5dp"
                         android:layout_weight="1"
-                        android:text="20-04-2021"
                         android:textAlignment="textEnd"
                         android:textSize="12sp" />
                 </LinearLayout>
@@ -214,18 +219,18 @@
                     android:id="@+id/comment2Content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    android:text="tak tak, ok" />
+                    android:padding="5dp" />
             </LinearLayout>
 
             <ImageButton
                 android:id="@+id/removeComment2"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:background="#E0DDE6"
                 android:visibility="gone"
-                app:srcCompat="@android:drawable/ic_menu_delete" />
+                app:srcCompat="@android:drawable/ic_menu_delete"
+                tools:visibility="visible" />
 
         </LinearLayout>
 
@@ -234,13 +239,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#E0DDE6"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone"
+            tools:visibility="visible">
 
 
             <ImageView
                 android:id="@+id/cProfilPhoto"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_weight="0"
                 tools:srcCompat="@android:drawable/ic_menu_camera" />
@@ -263,7 +271,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
-                        android:text="Alina Kowalska"
                         android:textColor="#5C514E"
                         android:textStyle="bold|italic" />
 
@@ -273,7 +280,6 @@
                         android:layout_height="19dp"
                         android:layout_marginEnd="5dp"
                         android:layout_weight="1"
-                        android:text="20-04-2021"
                         android:textAlignment="textEnd"
                         android:textSize="12sp" />
                 </LinearLayout>
@@ -282,18 +288,18 @@
                     android:id="@+id/commentContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    android:text="tak tak, ok" />
+                    android:padding="5dp" />
             </LinearLayout>
 
             <ImageButton
                 android:id="@+id/removeComment"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:background="#E0DDE6"
                 android:visibility="gone"
-                app:srcCompat="@android:drawable/ic_menu_delete" />
+                app:srcCompat="@android:drawable/ic_menu_delete"
+                tools:visibility="visible" />
 
         </LinearLayout>
 
@@ -313,7 +319,7 @@
                 android:layout_weight="1"
                 android:background="#FFFFFF"
                 android:ems="10"
-                android:hint="comment"
+                android:hint="@string/commnet"
                 android:inputType="textPersonName"
                 android:textSize="24sp" />
 
